
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_family; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; } ;
typedef int server ;
typedef int buffer ;


 int AF_INET ;
 int HTTP_PORT ;
 int PF_INET ;
 int SOCK_STREAM ;
 int closesocket (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int memcpy (char*,int ,int ) ;
 int memset (struct sockaddr_in*,int ,int) ;
 int perror (char*) ;
 int recv (int,char*,int,int ) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 int strlen (char*) ;
 int write (int,char*,int) ;

void sendpacket(char buffer[8192], int p, char host[100])
{

    struct sockaddr_in server;
    struct hostent *host_info;
    unsigned long addr;
    int sock;
    char dat[8192];
    int count;


    sock = socket( PF_INET, SOCK_STREAM, 0);
    if (sock < 0) {
        perror( "failed to create socket");
        exit(1);
    }



    memset( &server, 0, sizeof (server));


    host_info = gethostbyname( host);
    if (((void*)0) == host_info) {
        fprintf( stderr, "unknown server: %s\n", host);
        exit(1);
    }
    memcpy( (char *)&server.sin_addr, host_info->h_addr, host_info->h_length);

    server.sin_family = AF_INET;
    server.sin_port = htons( HTTP_PORT);



    if ( connect( sock, (struct sockaddr*)&server, sizeof( server)) < 0) {
        perror( "can't connect to server");
        exit(1);
    }

    send( sock, buffer, strlen( buffer), 0);


    if (p==1) {
      do {
          count = recv( sock, buffer, sizeof(buffer), 0);
          write( 1, buffer, count);
      }
      while (count > 0);
    }


    closesocket( sock);

}
